add i18n, basic navigation and layout

--- a/src/assets/scss/fonts.scss
+++ b/src/assets/scss/fonts.scss
@@ -1,7 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Lekton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap');
 
 * {
     font-family: "Lekton", serif;
     font-optical-sizing: auto;
+    font-weight: bold;
 }
 
+
+.text-bold {
+    font-weight: bold;
+}
+
+// Clearfix
+body, html, h1, h2, h3, h4, h5 {
+    margin: 0;
+    padding: 0;
+}
