start data driven event list

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,13 +6,19 @@
     font-weight: bold;
 }
 
-
 .text-bold {
     font-weight: bold;
 }
 
+
 // Clearfix
-body, html, h1, h2, h3, h4, h5 {
+body,
+html,
+h1,
+h2,
+h3,
+h4,
+h5 {
     margin: 0;
     padding: 0;
 }
