feedback round 1 part 1 - the beginning

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -44,7 +44,9 @@ a.router-link-active {
   text-decoration: underline;
   color: var(--color-black);
 }
-
+.td-none {
+  text-decoration: none !important;
+}
 .bg-primary {
   background: var(--color-primary);
   color: var(--color-black);
