--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,15 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap');
+
+/* latin */
+@font-face {
+  font-family: 'JetBrains Mono';
+  font-style: normal;
+  font-weight: 100 800;
+  src: url(~/public/fonts/JetBrainsMono.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 
 * {
-    font-family: "Lekton", serif;
-    font-optical-sizing: auto;
-    font-weight: bold;
+  font-family: "JetBrains Mono", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
 }
 
 .text-bold {
-    font-weight: bold;
+  font-weight: bold;
 }
-
 
 :root {
   --color-primary: #92beff;
